[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/net for butterflies.png" type="Texture" id=1]
[ext_resource path="res://ui.tres" type="Theme" id=2]
[ext_resource path="res://scripts/MaintainHydroponics.gd" type="Script" id=3]
[ext_resource path="res://scripts/NetForButterflies.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.25, 300 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 437.5, 19 )

[node name="MaintainHydroponics" type="Node2D"]
script = ExtResource( 3 )

[node name="GameOutline" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0.203922, 0.203922, 0.203922, 0.501961 )

[node name="NetForButterflies" type="KinematicBody2D" parent="."]
position = Vector2( 161, 115 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NetForButterflies"]
texture = ExtResource( 1 )

[node name="Catchment" type="Area2D" parent="NetForButterflies"]
space_override = 3
gravity_point = true
gravity = 200.0
linear_damp = 1.5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NetForButterflies/Catchment"]
position = Vector2( 0, -27.5 )
scale = Vector2( 3.95, 2.4442 )
polygon = PoolVector2Array( -10.1266, -2.25023, -7.08861, 1.84109, -2.53165, 3.88676, 2.53165, 3.88676, 7.8481, 1.43196, 10.1266, -2.25023, 8.60759, -6.34155, 2.91139, -9.33333, -2.91139, -9.33333, -8.10126, -6.75068 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NetForButterflies"]
position = Vector2( 1, 9 )
scale = Vector2( 4.5, 4.3 )
polygon = PoolVector2Array( -9.77778, -10, -10, 6.04651, -8.88889, 7.90698, -4.66667, 9.53488, -0.444445, 10, 4.66667, 9.53488, 8, 8.13953, 9.77778, 6.27907, 9.77778, -10, 8.88889, -10, 8.66667, -9.30233, 6.66667, -7.67442, 2, -6.27907, -2.44444, -6.27907, -6.44444, -7.44186, -8.88889, -9.06977, -9.11111, -10 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( -12, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -8.5, 300 )
shape = SubResource( 1 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 824, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( -4.25, 300 )
shape = SubResource( 1 )

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 10, -13 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 391, -6 )
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 11, 616 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 388.5, 3 )
shape = SubResource( 2 )

[node name="StatusOutline" type="ColorRect" parent="."]
margin_left = 507.0
margin_top = 535.0
margin_right = 761.0
margin_bottom = 582.0
color = Color( 0.427451, 0.427451, 0.427451, 0.431373 )

[node name="Status" type="HBoxContainer" parent="."]
margin_left = 520.0
margin_top = 526.0
margin_right = 802.0
margin_bottom = 590.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="Status"]
margin_top = 16.0
margin_right = 101.0
margin_bottom = 47.0
text = "Butterflies:"

[node name="Score" type="Label" parent="Status"]
margin_left = 105.0
margin_top = 16.0
margin_right = 148.0
margin_bottom = 47.0
text = "0/10"

[node name="VSeparator2" type="VSeparator" parent="Status"]
margin_left = 152.0
margin_right = 160.0
margin_bottom = 64.0

[node name="TimeLeft" type="Label" parent="Status"]
margin_left = 164.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 47.0
rect_min_size = Vector2( 60, 0 )
text = "00:00"

[node name="PlayTime" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
